syntax = "proto3";

option csharp_namespace = "ExchangeRatesAgainstDollar.Grpc.Protos";

service ExchangeRateService {
	rpc GetTheExchangeRate (GetTheExchangeRateRequest) returns (ExchangeRateModel);
    rpc GetTheExchangeRateList (GetTheExchangeRateAllRequest) returns (ExchangeRateModelList);
}

message GetTheExchangeRateRequest {
    string currencyCode = 1;
}

message GetTheExchangeRateAllRequest {

}

message ExchangeRateModel {
	string currencyCode = 1;
    string error = 2;

    // Whole units part of the amount
    int64 units = 3;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 4;
}
message ExchangeRateModelList {
	repeated ExchangeRateModel ExchangesRates = 1;
    string error = 2;
}

